Fix vertical alignment in top level pages (#109)
* fixed usage of .bx--offset class in Banner

* Tools & Blog pages set Banner offset to false

* fixed vertical alignment with Banner in Tools

* fixed vertical alignment on Homepage

* fixed vertical alignment in Blog

* Tools uses same bottom spacing as other top level pages with wide layout

* fixed vertical alignment in Help page

* evenly space sidebar items in Blog

--- a/src/scss/site/utilities/_spacing.scss
+++ b/src/scss/site/utilities/_spacing.scss
@@ -39,6 +39,10 @@
   height: $spacing-48;
 }
 
+.spacing--v-64 {
+  height: $spacing-64;
+}
+
 .spacing--v-96 {
   height: $spacing-96;
 }
